frontend: fix highscore table styles on firefox

--- a/frontend/src/modules/+about/components/high-scores/high-scores.scss
+++ b/frontend/src/modules/+about/components/high-scores/high-scores.scss
@@ -19,6 +19,7 @@
             
             & > * {
                 display: table-cell;
+                vertical-align: top;
                 
                 &:first-of-type {
                     width: 100px;
